--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <body>
+<div class="dashboard">
+    <!--Top Dashboard-->
+    <div class="dashboard">
+        <app-dashboard></app-dashboard>
+    </div>
+</div>
 <router-outlet></router-outlet>
 </body>
 
