--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top " style="background-color: #016fbe" >
+<nav class="navbar navbar-expand-md navbar-dark fixed-top " style="background-color: #016fbe" id="dashboard" >
     <img src="../../assets/logo.png" alt="[LOGO]" style="height: 60px; width: 60px">
 </nav>
